test_data/Xml/Unexpected/Unserializable/InvalidClassName/basicEventElement/wrong.xml.exception
Expected an element representing an instance of class BasicEventElement with element name basicEventElement, but got: utterlyInvalid at: the beginning